--- a/web/style/style.css
+++ b/web/style/style.css
@@ -60,3 +60,9 @@ and open the template in the editor.
             padding-top: 10px;
             box-sizing: border-box;
         }
+        .edit {
+            
+        }
+        .delete{
+            
+        }
