--- a/web/style/style.css
+++ b/web/style/style.css
@@ -9,57 +9,88 @@ and open the template in the editor.
 */
  body {
             margin: 0;
+           padding-top: 8%;
+           background-color: darkgrey;
+ }
+        .del:hover{
+            background-color: red;
+           transform: scale(1.2) perspective(1px);
             
         }
+        legend{
+            text-align: center;
+        }
+        .edt:hover{
+            background-color: skyblue;
+            transform: scale(1.2) perspective(1px);
+        }
         h1, h2 {
-            font-family: 'Amatica SC', cursive;
+            font-family: 'Amatica SC',  sans-serif;
             font-weight: 700;
             text-align: center;
         }
-        p {
-            font-family: 'Open Sans Condensed', sans-serif;
-        }
-        table,tr,td,th{
-            border: forestgreen;
-            border-style: groove;
-        }
         
-        .container div {
-            padding: 1%;
-            box-sizing: border-box;
-            min-height: 500px;
+        table,td,th{
+            border: graytext;
+            border-style: double; 
         }
         .addUser, .editUser {
             background-color: #f4f4f4;
             width: 25%;
             float: left;
-             margin: 0;
-              box-sizing: border-box;
-            min-height: 500px;
+            box-sizing: border-box;
+            margin-left: 3%;
+           
         }
         .addUser{
-           padding: 1%;
+            padding-right: 30px;
+            padding: 1%; 
         }
         .editUser{
             padding-right: 30px;
             padding: 1%; 
         }
         .manageUser {
-/*          background-color: pink; */
-            width: 40%;
+         
+            width: 38%;
             float: left;
-            padding: 5%; 
-            
+            margin-left: 5%;
+            box-sizing: border-box;
+             background-color: #f4f4f4;
+             
+           
         }
+        
         .footer {
+            font-size: 8pt;
+            font-style: italic;
             clear: both;
-            font-family: 'Amatica SC', cursive;
-            background-color: skyblue;
             text-align: center;
-            height: 50px;
+            height: 80px;
             padding-top: 10px;
             box-sizing: border-box;
+            position: fixed;
+            padding: 10px 10px 0px 10px;
+            bottom: 0;
+            width: 100%;
+           
+            background: gainsboro;
         }
+        header{
+            width: 100%;
+            background: gainsboro;
+             position: fixed;
+            padding: 10px 10px 0px 10px;
+             top: 0;
+              height: 80px;
+               text-align: center;
+              
+        }
+        header li{
+         display: inline;
+         padding-right: 100px;
+         font-size: 20pt;
+         }
         .edit {
             
         }
