--- a/web/style/style.css
+++ b/web/style/style.css
@@ -33,7 +33,7 @@ and open the template in the editor.
         table,td,th{
             border: graytext;
             border-style: double; 
-            padding-left: 13px;
+            padding-left: 10px;
             padding-right:5px;
             margin-right:10px;
         }
@@ -42,7 +42,7 @@ and open the template in the editor.
             width: 25%;
             float: left;
             box-sizing: border-box;
-            margin-left: 3%;
+            margin-left: 50px;
            
         }
         .addUser{
@@ -50,14 +50,14 @@ and open the template in the editor.
             padding: 1%; 
         }
         .editUser{
-            padding-right: 30px;
+            margin-left: 70px;
             padding: 1%; 
         }
         .manageUser {
-         
-            width: 38%;
+            padding:1%;
+            width: 750px;
             float: left;
-            margin-left: 5%;
+            margin-left: 3%;
             box-sizing: border-box;
              background-color: #f4f4f4;
              
