--- a/web/style/style.css
+++ b/web/style/style.css
@@ -94,10 +94,7 @@ and open the template in the editor.
          padding-right: 100px;
          font-size: 20pt;
          }
-        .edit {
-            
-        }
-        .delete{
-            
-        }
+         .paging {
+             text-align: center;
+         }
         
